--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
+    <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <title>Word-a-HTML</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.quilljs.com/1.3.6/quill.snow.css">
@@ -201,9 +202,7 @@ document.addEventListener('DOMContentLoaded', () => {
           <tr>
            <td align="left" valign="top">  
             <div width="100%" align="left" style="padding-bottom: 20px;">
-            
 ${editorContent}
-            
             </div>
            </td>
           </tr>
