--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@ ${languageSnippets[lang]}
     </tr>
    </table>
   </div>
+  <img src="https://queue.simpleanalyticscdn.com/noscript.gif?timezone=Europe%2FAmsterdam&unique=false&hostname=cv.uoc.edu&path=&utm_campaign=&utm_content=[OBTENERPARAMETROUNODEST]&utm_medium=notificador&https=true" referrerpolicy="no-referrer-when-downgrade" alt="" />
  </body>
 </html>`;
     }
