--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
               <a class="btn btn-sm text-dark rounded-0 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Paràmetres</a>
               <ul class="dropdown-menu shadow-sm">
                 <li><a class="dropdown-item small text-dark" href="#" data-text="[TERCERSNOMBRESINAPELLIDOS]">TERCERSNOMBRESINAPELLIDOS</a></li>
-                <li><a class="dropdown-item small text-dark" href="#" data-text="[PARAMETROUNODEST]">PARAMETROUNODEST</a></li>
-                <li><a class="dropdown-item small text-dark" href="#" data-text="[PARAMETRODOSDEST]">PARAMETRODOSDEST</a></li>
-                <li><a class="dropdown-item small text-dark" href="#" data-text="[PARAMETROTRESDEST]">PARAMETROTRESDEST</a></li>
+                <li><a class="dropdown-item small text-dark" href="#" data-text="[OBTENERPARAMETROUNODEST]">PARAMETROUNODEST</a></li>
+                <li><a class="dropdown-item small text-dark" href="#" data-text="[OBTENERPARAMETRODOSDEST]">PARAMETRODOSDEST</a></li>
+                <li><a class="dropdown-item small text-dark" href="#" data-text="[OBTENERPARAMETROTRESDEST]">PARAMETROTRESDEST</a></li>
               </ul>
             </div>
           </div>
