--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
             <select class="ql-header">
               <option value="1">Header 1</option>
               <option value="2">Header 2</option>
+              <option value="3">Header 3</option>
+              <option value="4">Header 4</option>
               <option value="">Normal</option>
             </select>
             <select class="ql-color">
